--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,23 @@
 </head>
 <body>
 
+    <nav class="navbar m-nav navbar-expand-lg">
+        <div class="container">
+        <a href="{% url 'home' %}" class="navbar-brand">TeacherVerse</a>
+            <ul class="navbar-nav">
+                {% if user.is_authenticated %}
+                    <li><a class="nav-link" href="">New Post</a></li>
+                    <li><a class="nav-link" href="">Groups</a></li>
+                    <li><a class="nav-link" href="">New Group</a></li>
+                    <li><a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a></li>
+                {% else %}
+                    <li><a class="nav-link" href="">Groups</a></li>
+                    <li><a class="nav-link" href="{% url 'accounts:login' %}">Login</a></li>
+                    <li><a class="nav-link" href="{% url 'accounts:signup' %}">Signup</a></li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
 {% block content %}
 {% endblock %}
     
