--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -7,7 +7,7 @@
         <form method="post">
             {% csrf_token %}
             {% bootstrap_form form %}
-            <input type="submit" value="Log In" class="btn btn-default">
+            <input type="submit" value="Log In" class="btn btn-primary">
         </form>
     </div>
 {% endblock %}
